[package]
name = "pixel-sig"
version = "0.1.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"
#error-chain = "0.11.0"
failure = "0.1.5"

[dependencies.amcl_wrapper]
#git = "https://github.com/lovesh/amcl_rust_wrapper"
#branch = "master"
path = "../amcl_wrapper/"
features = ["bls381"]