[package]
name = "pixel-sig"
version = "0.3.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Pixel: Forward secure Multi-signatures"
license = "Apache-2.0"
repository = "https://github.com/lovesh/pixel-signature"

[dependencies]
rand = "0.7"
#error-chain = "0.11.0"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.amcl_wrapper]
version = "0.3.5"
#path = "../amcl_wrapper/"
default-features = false
features = ["bls381"]

[features]
default = ["VerkeyG2"]
VerkeyG2 = []    # Verification key is in G2 and all but one element of signature are in G1
VerkeyG1 = []    # Verification key is in G1 and all but one element of signature are in G2
